# project_cicd

./: CMakeLists.txt  README.md  main.cpp  person.cpp  person.h  test.cpp
.github/workflows/: testing.yml
